# replit-bookkeeping

./: .replit  app.py  models.py  pyproject.toml  replit.md  routes.py
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  login.html  records.html  upload.html
uploads/: .gitkeep
utils/: code_extractor.py  code_extractor_simple.py  image_processor.py  ocr_processor.py
